# stash_mcp_server

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker_image.yml  python-package.yml
src/stash_mcp_server/: __init__.py  config.py  connection.py  fragments.py  prompts.py  resources.py  server.py  tools.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_connection.py  test_prompts.py  test_resources.py  test_server.py  test_tools.py  test_utils.py
