[project]
name = "stash_mcp_server"
version = "0.1.0"
description = "An MCP server for Stash"
requires-python = ">=3.10"
dependencies = [
    "stashapi>=0.1.0",
    "fastmcp>=2.11.3",
]

[project.scripts]
stash_mcp_server = "stash_mcp_server.__main__:main"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "stashapi.*",
  "fastmcp.*"
]
ignore_missing_imports = true

