[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-mcp-server"
version = "0.1.0"
description = "An MCP server for Stash"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "python-dotenv>=1.1.1",
    "stashapi>=0.1.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "tox>=4.24.1",
    "mypy>=1.14.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
stash_mcp_server = "stash_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.autopep8]
max_line_length = 100
# in-place = true
recursive = true
aggressive = 1

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
    "venv"
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[tool.isort]
multi_line_output = 3  # Mode 3: Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
# Google Style section order
force_single_line = false
force_sort_within_sections = false
lexicographical = false
order_by_type = false
group_by_package = false

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["method-assign", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as async",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "src/stash_mcp_server/__main__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.tox]
env_list = ["3.11"]