[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-mcp-server"
version = "0.2.0"
description = "An MCP server for Stash"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.3",
    "python-dotenv>=1.1.1",
    "stashapi>=0.1.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "tox>=4.24.1",
    "mypy>=1.14.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
stash_mcp_server = "stash_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.autopep8]
max_line_length = 100
# in-place = true
# recursive = true
aggressive = 3
ignore = []
select = [
    "E101",  # indentation contains mixed spaces and tabs
    "E11",   # Fix indentation
    "E121",  # continuation line under-indented for hanging indent
    "E122",  # continuation line missing indentation or outdented
    "E123",  # closing bracket does not match indentation of opening bracket's line
    "E124",  # closing bracket does not match visual indentation
    "E125",  # continuation line with same indent as next logical line
    "E126",  # continuation line over-indented for hanging indent
    "E127",  # continuation line over-indented for visual indent
    "E128",  # continuation line under-indented for visual indent
    "E129",  # visually indented line with same indent as next logical line
    "E131",  # continuation line unaligned for hanging indent
    "E201",  # whitespace after '('
    "E202",  # whitespace before ')'
    "E203",  # whitespace before ':'
    "E211",  # whitespace before '('
    "E221",  # multiple spaces before operator
    "E222",  # multiple spaces after operator
    "E223",  # tab before operator
    "E224",  # tab after operator
    "E225",  # missing whitespace around operator
    "E226",  # missing whitespace around arithmetic operator
    "E227",  # missing whitespace around bitwise or shift operator
    "E228",  # missing whitespace around modulo operator
    "E231",  # missing whitespace after ','
    "E241",  # multiple spaces after ','
    "E242",  # tab after ','
    "E251",  # unexpected spaces around keyword / parameter equals
    "E252",  # missing whitespace around parameter equals
    "E26",   # Fix spacing after comment hash for inline comments
    "E265",  # block comment should start with '# '
    "E266",  # too many leading '#' for block comment
    "E27",   # Fix extraneous whitespace around keywords
    "E301",  # expected 1 blank line, found 0
    "E302",  # expected 2 blank lines, found 0
    "E303",  # too many blank lines
    "E304",  # blank lines found after function decorator
    "E305",  # expected 2 blank lines after end of function or class
    "E306",  # expected 1 blank line before a nested definition
    "E401",  # multiple imports on one line
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "E502",  # the backslash is redundant between brackets
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E703",  # statement ends with a semicolon
    "E704",  # multiple statements on one line (def)
    "E711",  # comparison to None should be 'if cond is None:'
    "E712",  # comparison to True should be 'if cond is True:' or 'if cond:'
    "E713",  # test for membership should be 'not in'
    "E714",  # test for object identity should be 'is not'
    "E721",  # do not compare types, use 'isinstance()'
    "E722",  # do not use bare except, specify exception instead
    "E731",  # do not assign a lambda expression, use a def
    "W291",  # trailing whitespace
    "W292",  # no newline at end of file
    "W293",  # blank line contains whitespace
    "W391",  # blank line at end of file
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
    "W601",  # .has_key() is deprecated, use 'in'
    "W602",  # deprecated form of raising exception
    "W603",  # '<>' is deprecated, use '!='
    "W604",  # backticks are deprecated, use 'repr()'
]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
    "venv"
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[tool.isort]
multi_line_output = 3  # Mode 3: Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
# Google Style section order
force_single_line = false
force_sort_within_sections = false
lexicographical = false
order_by_type = false
group_by_package = false

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["method-assign", "arg-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as async",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "src/stash_mcp_server/__main__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.tox]
env_list = ["3.11"]